--- a/dbApplication/AddEmployee.xaml
+++ b/dbApplication/AddEmployee.xaml
@@ -1,11 +1,12 @@
-﻿<Page x:Class="dbApplication.EmployeeList"
+﻿<Page x:Class="dbApplication.EmployeeInfo"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:dbApplication"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800" Title="EmployeeList">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="Add Employee">
 
     <Grid>
         <Grid Margin="10,10,10,10">
@@ -18,14 +19,11 @@
             </Grid.Background>
 
             <Label Grid.Column="1" Foreground="White" FontWeight="DemiBold" FontSize="28" Margin="32,10,205,368" >
-                Lista pracowników:
+                Wprowadź dane:
             </Label>
 
-            <DataGrid Width="500" Height="150" Name="employeeGrid" Foreground="Black" FontWeight="Medium" Grid.ColumnSpan="2" Margin="140,130,140,100">
-            </DataGrid>
 
-            <Button Margin="0,380,10,10" Width="164" Height="40" HorizontalAlignment="Right" Click="Load_Click" Grid.ColumnSpan="2">Załaduj</Button>
-            <Button Margin="10,380,0,10" Width="164" Height="40" HorizontalAlignment="Left" Click="Add_Click" Grid.ColumnSpan="2">Dodaj pracownika</Button>
+            <!--<Button Margin="0,380,10,10" Width="164" Height="40" HorizontalAlignment="Right" Click="Load_Click" Grid.ColumnSpan="2">Dodaj</Button>-->
         </Grid>
     </Grid>
 </Page>
