"AddEmployee" page action update. Application icon added

--- a/dbApplication/AddEmployee.xaml
+++ b/dbApplication/AddEmployee.xaml
@@ -9,50 +9,49 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="89*"/>
+            <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid Margin="10">
+        <Grid Grid.RowSpan="2" Height="480">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" MinHeight="466"/>
-                <RowDefinition Height="0*" />
-                <RowDefinition Height="0*" />
+                <RowDefinition Height="324"/>
+                <RowDefinition Height="142"/>
             </Grid.RowDefinitions>
             <Grid.Background>
                 <ImageBrush ImageSource="bg.jpg"/>
             </Grid.Background>
 
-            <Label Foreground="White" FontWeight="DemiBold" FontSize="28" Margin="32,10,205,368" >
+            <Label Foreground="White" FontWeight="DemiBold" FontSize="28" Margin="32,10,205,226" >
                 Wprowadź dane:
             </Label>
 
-            <Label Foreground="white" FontWeight="DemiBold" FontSize="16" Margin="60,96,114,298" Content="Imię i Nazwisko:"/>
+            <Label Foreground="white" FontWeight="DemiBold" FontSize="16" Margin="60,96,114,195" Content="Imię i Nazwisko:"/>
 
-            <TextBox Name="nameAndSurname" Margin="189,101,0,342" Width="200" HorizontalAlignment="Left"/>
+            <TextBox Name="nameAndSurname" Margin="189,101,0,200" Width="200" HorizontalAlignment="Left"/>
 
-            <Label Foreground="white" FontWeight="DemiBold" FontSize="16" Margin="142,129,476,271" Content="Płeć:"/>
-            <StackPanel Margin="0,0,0,36">
-                <ComboBox Name="gender" Width="80" Height="auto" Margin="190,135,0,10" HorizontalAlignment="Left">
-                    <ComboBoxItem IsSelected="True" Content="Male"/>
+            <Label Foreground="white" FontWeight="DemiBold" FontSize="16" Margin="142,129,476,160" Content="Płeć:"/>
+            <StackPanel Margin="0,0,0,16" Grid.RowSpan="2">
+                <ComboBox Name="genderBox" Width="80" Height="auto" Margin="190,135,0,10" HorizontalAlignment="Left">
+                    <ComboBoxItem IsSelected="True" Content="Male" />
                     <ComboBoxItem Content="Female"/>
                 </ComboBox>
             </StackPanel>
 
-            <Label Margin="72,164,0,235" Foreground="White" FontSize="16" FontWeight="DemiBold" HorizontalAlignment="Left" Content="Wymiar pracy:" Width="114"/>
-            <StackPanel Margin="0,0,0,36">
-                <ComboBox Name="workingTime" Width="80" Height="auto" Margin="190,170,0,10" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5">
+            <Label Margin="72,164,0,124" Foreground="White" FontSize="16" FontWeight="DemiBold" HorizontalAlignment="Left" Content="Wymiar pracy:" Width="114"/>
+            <StackPanel>
+                <ComboBox Name="workingTimeBox" Width="80" Height="auto" Margin="190,170,0,10" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5">
                     <ComboBoxItem IsSelected="True" Content="Fulltime"/>
                     <ComboBoxItem Content="Parttime"/>
                     <ComboBoxItem Content="Practice"/>
                 </ComboBox>
             </StackPanel>
 
-            <Label Margin="88,200,0,235" Foreground="White" FontSize="16" FontWeight="DemiBold" HorizontalAlignment="Left" Content="Stanowisko:" Width="96"/>
-            <StackPanel Margin="0,0,0,36">
-                <ComboBox Name="position" Width="100" Height="auto" Margin="190,205,0,10" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5">
+            <Label Margin="88,200,0,93" Foreground="White" FontSize="16" FontWeight="DemiBold" HorizontalAlignment="Left" Content="Stanowisko:" Width="96"/>
+            <StackPanel Height="450" VerticalAlignment="Top" Grid.RowSpan="2">
+                <ComboBox Name="positionBox" Width="100" Height="auto" Margin="190,205,0,10" HorizontalAlignment="Left">
                     <ComboBoxItem IsSelected="True" Content="Programmer"/>
                     <ComboBoxItem Content="Boss"/>
                     <ComboBoxItem Content="Trainee"/>
@@ -60,7 +59,8 @@
             </StackPanel>
 
 
-            <Button Margin="0,383,10,51" Width="134" HorizontalAlignment="Right">Dodaj</Button>
+            <Button Margin="0,70,10,32" Width="164" Height="40" HorizontalAlignment="Right" Click="AddEmpl_Click" Grid.Row="1">Dodaj</Button>
+            <Button Margin="10,70,0,32" Width="164" Height="40" HorizontalAlignment="Left" Click="Back_Click" Grid.Row="1">Powrót</Button>
         </Grid>
     </Grid>
 </Page>
