--- a/dbApplication/EmployeeList.xaml
+++ b/dbApplication/EmployeeList.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800" Title="EmployeeList">
 
     <Grid>
-        <Grid Margin="10,10,10,10">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition />
